# shamt-ai-dev

./: .gitignore  AUDIT_STATUS_ROUND2.md  CLAUDE.md  DISCOVERY_LOOP_PROPOSAL.md  FULL_AUDIT_SUMMARY.md  README.md  ROUND1_AUDIT_SUMMARY.md  SHAMT14_DESIGN.md  SHAMT20_DESIGN.md  SHAMT2_DESIGN.md  SHAMT3_DESIGN.md  SHAMT3_SYNC_ANALYSIS.md  SHAMT6_DESIGN.md  SYNC_FLOW_REDESIGN.md  TODO.md  proposed_new_flow.txt
.claude/agents/: shamt-architect.md  shamt-builder.md  shamt-code-reviewer.md  shamt-discovery-researcher.md  shamt-guide-auditor.md  shamt-spec-aligner.md  shamt-validator.md
.claude/commands/: CHEATSHEET.md  shamt-audit.md  shamt-export.md  shamt-import.md  shamt-promote.md  shamt-resume.md  shamt-start-epic.md  shamt-status.md  shamt-validate.md
.shamt/: .gitignore  CHANGES.md
.shamt/agents/: README.md  (+7 more)
.shamt/mcp/: README.md  pyproject.toml
.shamt/mcp/src/shamt_mcp/: __init__.py  __main__.py  audit_run.py  epic_status.py  export_pipeline.py  import_pipeline.py  metrics_append.py  next_number.py  validation_round.py
.shamt/mcp/tests/: test_audit_run.py  test_epic_status.py  test_export_import.py  test_metrics_append.py  test_next_number.py  test_validation_round.py
.shamt/sdk/: README.md  pr_provider.py  pyproject.toml  requirements.txt  shamt-cron-janitor.py  shamt-validate-pr.py
.shamt/sdk/.github/workflows/: shamt-cron-janitor.yml.template  shamt-validate.yml.template
.shamt/sdk/azure-pipelines/: README.md  shamt-cron-janitor.yml.template  shamt-validate.yml.template
design_docs/: CLAUDE_INTEGRATION_THEORIES.md  FUTURE_ARCHITECTURE_OVERVIEW.md
(+592 files in other folders)
