[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shamt-mcp"
version = "0.1.0"
description = "Shamt MCP server — next_number and validation_round tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
shamt-mcp = "shamt_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shamt_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
